# loacl_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  simplification_refractor.md
docs/: code-overview.md  openai-assistants-streaming.md  openai-assistants.md  prd.md  schema.md
sql/: schema.sql  test_schema_procedures.sql
src/: __init__.py  main.py
src/app/: main.py
src/app/api/: __init__.py  analytics.py  assistant.py  auth.py  deps.py  files.py  health.py  messages.py  preferences.py  threads.py  webhooks.py
src/app/core/: auth.py  config.py  db.py  dependencies.py  di.py  logger.py  logging.py  settings.py  supabase.py
src/app/db/: client.py
src/app/models/: analytics.py  assistant.py  auth.py  base.py  chatbot.py  errors.py  events.py  file.py  health.py  preferences.py  response.py  suggestions.py  tasks.py  thread.py  user.py
src/app/repositories/: assistant.py  base.py  file.py  preferences.py  session.py  suggestions.py  task.py  thread.py  user.py  webhook.py
src/app/schemas/: api_key.py  (+3 more)
src/tests/: conftest.py  test_health.py
supabase/migrations/: 20240318000000_create_initial_schema.sql  20240318000001_create_chat_tables.sql
tasks/: v1.md  v2.md
tests/: conftest.py  test_api_flow.py  test_api_key_flow.py  test_health.py  test_streaming_flow.py
tests/api/: test_analytics.py  test_health.py  test_messages.py  test_webhooks.py
tests/unit/: test_base_service.py  test_di.py  test_events.py  test_files.py  test_health.py  test_tasks.py
(+34 files in other folders)
